(not very much tested) Configurate - Very very unstable
* Rewritten nearly everything from bukkit's configuration library to sponge's configurate
* Changed some keys in config.yml
* Probably fixed #262 but who knows